grafana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - grafana.mambudemo.com
      secretName: garafana-cert
  rules:
    - host: grafana.mambudemo.com
      http:
        paths:
        - path: /
          backend:
            serviceName: grafana
            servicePort: 80
